@@ -21,7 +21,7 @@ public class ParserTest {
      * Verifies that the method correctly converts string inputs ("one", "two", etc.) to corresponding {@link RoomCapacity} enum values.
      */
     @Test
-    void testGetRoomCapacityValid() throws IOException{
+    void testGetRoomCapacityValid(){
         // Test valid inputs
         assertEquals(RoomCapacity.One, ParserUtils.getRoomCapacity("one"));
         assertEquals(RoomCapacity.Two, ParserUtils.getRoomCapacity("two"));
@@ -36,7 +36,7 @@ public class ParserTest {
      * Verifies that the method throws an {@link IllegalArgumentException} when an invalid capacity is provided.
      */
     @Test
-    void testGetRoomCapacityInvalid() throws IOException{
+    void testGetRoomCapacityInvalid() {
         // Test invalid inputs
         assertThrows(IllegalArgumentException.class, () -> {ParserUtils.getRoomCapacity("seven");});
         assertThrows(IllegalArgumentException.class, () -> {ParserUtils.getRoomCapacity("abc");});
@@ -48,7 +48,7 @@ public class ParserTest {
      * to corresponding {@link RoomCapacity} enum values.
      */
     @Test
-    void testRoomTypeToSizeValid() throws IOException{
+    void testRoomTypeToSizeValid() {
         assertEquals(RoomCapacity.One, ParserUtils.roomTypeToSize("Single Room"));
         assertEquals(RoomCapacity.Two, ParserUtils.roomTypeToSize("Double Room"));
         assertEquals(RoomCapacity.Three, ParserUtils.roomTypeToSize("Triple Room"));
@@ -59,7 +59,7 @@ public class ParserTest {
      * Verifies that the method throws an {@link IllegalArgumentException} when an unrecognized room type string is provided.
      */
     @Test
-    void testRoomTypeToSizeInvalid() throws IOException{
+    void testRoomTypeToSizeInvalid() {
         // Test for invalid room type string
         assertThrows(IllegalArgumentException.class, () -> {ParserUtils.roomTypeToSize("Quad Room");});
     }
@@ -131,14 +131,16 @@ public class ParserTest {
         assertEquals(536, numDorms);
         assertEquals(12, numSuites);
 
-        IDormRoom room0 = rooms.get(0);
-        assertEquals(room0.getRoomNumber(), "BARBOUR 050 051");
+        IDormRoom room0 = rooms.getFirst();
+        assertEquals("BARBOUR 050", room0.getRoomNumber());
         assertTrue(room0.hasKitchen());
         assertTrue(room0.isSuite());
         assertEquals(BathroomType.Private, room0.getBathroomType());
+        assertEquals(736, room0.getRoomSize());
+        assertEquals(RoomCapacity.Three, room0.getRoomCapacity());
 
         IDormRoom room136 = rooms.get(136);
-        assertEquals(room136.getRoomNumber(), "CHAPIN 330");
+        assertEquals("CHAPIN 330", room136.getRoomNumber());
         assertEquals(room136.getRoomSize(), 232);
         assertFalse(room136.hasKitchen());
         assertFalse(room136.isSuite());
